[workspace]
resolver = "2"
members = ["wgpu-in-app", "app-surface", "cargo-so"]
default-members = ["wgpu-in-app"]

[workspace.dependencies]
bytemuck = { version = "1.21", features = ["derive", "min_const_generics"] }
cfg-if = "1.0"
glam = "0.29"
log = "0.4"
noise = { version = "0.8", default-features = false }
pollster = "0.3"
rand = "0.7.2"
# wgpu = "24"
wgpu = { git = "https://github.com/richerfu/wgpu.git", branch = "trunk" }
# wgpu = { git = "https://github.com/jinleili/wgpu", branch="visionOS" }
# winit = { version = "0.30" }
winit = { git = "https://github.com/richerfu/winit.git", branch = "feat-ohos-30", default-features = false, features = [
    "rwh_06",
] }
raw-window-handle = "0.6"
env_logger = "0.11"

# macOS, iOS
libc = "0.2"
objc = "0.2.7"
core-graphics-types = "0.2"

# OpenHarmony
napi-ohos = "1.0"
napi-derive-ohos = "1.0"
openharmony-ability = "0.0.3"
openharmony-ability-derive = "0.0.2"

# android target
android_logger = "0.14"
jni = "0.21"
jni_fn = "0.1"
ndk-sys = "0.6"

# wasm target
web-sys = "0.3.77"
wasm-bindgen = "0.2.100"
js-sys = "0.3.77"
wasm-bindgen-futures = "0.4.50"


[patch.crates-io]
ash = { git = "https://github.com/ash-rs/ash.git", branch = "master" }
