[package]
name = "cargo-so"
authors = ["jinleili"]
description = "Helps cargo build Android .so lib files"
repository = "https://github.com/jinleili/wgpu-in-app"
readme = "./README.MD"
keywords = ["android", "so", "ndk", "jni"]
license = "MIT OR Apache-2.0"
edition = "2021"
version = "0.1.3"

[dependencies]
cargo-subcommand = "0.8.0"
clap = "3.2.22"
ndk-build = "0.8.0"
