[package]
name = "cargo-so"
authors = ["jinleili"]
description = "Helps cargo build Android .so lib files"
repository = "https://github.com/jinleili/wgpu-in-app"
readme = "./README.MD"
keywords = ["android", "so", "ndk", "jni"]
license = "MIT OR Apache-2.0"
edition = "2021"
version = "0.2.0"

[dependencies]
cargo-subcommand = "0.11"
clap = { version = "4", features = ["derive"] }
ndk-build = "0.9.0"