[package]
name = "cargo-so"
authors = ["jinleili"]
description = "Helps cargo build Android .so lib files"
repository = "https://github.com/jinleili/wgpu-in-app"
readme = "./README.MD"
keywords = ["android", "so", "ndk", "jni", "cargo"]
license = "MIT OR Apache-2.0"
edition.workspace = true
version = "0.3.1"

[dependencies]
cargo-subcommand = "0.12"
clap = { version = "4.5", features = ["derive"] }
ndk-build = "0.10"
