[package]
name = "wgpu-in-app"
authors = ["jinleili"]
version = "1.2.0"
edition.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["rlib", "staticlib", "cdylib"]

[features]
default = []
angle = ["wgpu/angle"]
vulkan-portability = ["wgpu/vulkan-portability"]

[dependencies]
bytemuck.workspace = true
cfg-if.workspace = true
glam.workspace = true
log.workspace = true
noise.workspace = true
pollster.workspace = true
rand.workspace = true
wgpu.workspace = true
env_logger.workspace = true

[target.'cfg(any(target_os = "macos", target_os = "windows", target_os = "linux"))'.dependencies]
app-surface = { workspace = true, features = ["winit"] }
winit.workspace = true

[target.'cfg(target_vendor = "apple")'.dependencies]
libc.workspace = true

[target.'cfg(target_os = "ios")'.dependencies]
app-surface = { workspace = true, features = [] }

[target.'cfg(target_os = "android")'.dependencies]
app-surface = { workspace = true, features = [] }
android_logger.workspace = true
jni.workspace = true
jni_fn.workspace = true
log-panics = "*"


[target.'cfg(target_arch = "wasm32")'.dependencies]

web-sys = { workspace = true, features = [
    "Document",
    "Navigator",
    "Gpu",
    "GpuAdapter",
    "HtmlCanvasElement",
    "OffscreenCanvas",
    "Window",
] }
wasm-bindgen.workspace = true
js-sys.workspace = true
wasm-bindgen-futures.workspace = true
